--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.datasource.username=estore
 spring.datasource.password=estore123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=pass
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
